Add lightfighter & largeshielddome

--- a/test.ini
+++ b/test.ini
@@ -1,10 +1,12 @@
 [simulator]
-logging        = 0
+logging         = 0
 
 [attacker]
-Deathstar      = 10000
-Cruiser        = 0
+Deathstar       = 10000
+Cruiser         = 0
+LightFighter    = 0
 
 [defender]
-RocketLauncher = 1000000
-HeavyLaser     = 0
+RocketLauncher  = 1000000
+HeavyLaser      = 0
+LargeShieldDome = 0
