--- a/test.ini
+++ b/test.ini
@@ -5,6 +5,7 @@ logging         = 0
 Deathstar       = 10000
 Cruiser         = 0
 LightFighter    = 0
+HeavyFighter    = 0
 
 [defender]
 RocketLauncher  = 1000000
