--- a/test.ini
+++ b/test.ini
@@ -2,12 +2,46 @@
 logging         = 0
 
 [attacker]
-Deathstar       = 10000
-Cruiser         = 0
+Weapon          = 0
+Shield          = 0
+Armour          = 0
+SmallCargo      = 0
+LargeCargo      = 0
 LightFighter    = 0
 HeavyFighter    = 0
+Cruiser         = 0
+Battleship      = 0
+ColonyShip      = 0
+Recycler        = 0
+EspionageProbe  = 0
+Bomber          = 0
+Destroyer       = 0
+Deathstar       = 10000
+Battlecruiser   = 0
 
 [defender]
+Weapon          = 0
+Shield          = 0
+Armour          = 0
+SmallCargo      = 0
+LargeCargo      = 0
+LightFighter    = 0
+HeavyFighter    = 0
+Cruiser         = 0
+Battleship      = 0
+ColonyShip      = 0
+Recycler        = 0
+EspionageProbe  = 0
+Bomber          = 0
+SolarSatellite  = 0
+Destroyer       = 0
+Deathstar       = 0
+Battlecruiser   = 0
 RocketLauncher  = 1000000
+LightLaser      = 0
 HeavyLaser      = 0
+GaussCannon     = 0
+IonCannon       = 0
+PlasmaTurret    = 0
+SmallShieldDome = 0
 LargeShieldDome = 0
